added new notes

--- a/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
@@ -95,7 +95,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Setting Up an External Ingress for HTTP Traffic\n",
+    "\n",
+    "#### The containers for our application are now deployed, but it’s not currently possible for anyone to access the application. By default, cluster resources are available only within the cluster itself. To expose our application to the world, we need to create a service and load balancer to provide an external IP address and to bring traffic to our containers. For the external exposure we are going to use two Kubernetes resources. The first is a service that load-balances Transmission Control Protocol (TCP) or User Datagram Protocol (UDP) traffic. In our case, we’re using the TCP protocol. And the second is an Ingress resource, which provides HTTP(S) load balancing with intelligent routing of requests based on HTTP paths and hosts. With a simple application like this, you might wonder why we choose to use the more complex Ingress, but as you’ll see in later sections, even this simple application will be serving HTTP requests from two different services. Furthermore, having an Ingress at the edge enables flexibility for future expansion of our service."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "apiVersion: v1\n",
+    "kind: Service\n",
+    "metadata:\n",
+    "  labels:\n",
+    "    app: frontend\n",
+    "  name: frontend\n",
+    "  namespace: default\n",
+    "spec:\n",
+    "  ports:\n",
+    "  - port: 8080\n",
+    "    protocol: TCP\n",
+    "    targetPort: 8080\n",
+    "  selector:\n",
+    "    app: frontend\n",
+    "  type: ClusterIP"
+   ]
   }
  ],
  "metadata": {
