added new notes

--- a/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
@@ -199,7 +199,145 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Managing Authentication with Secrets\n",
+    "\n",
+    "#### The Redis database is authenticated using a simple password. It might be convenient to think that you would store this password in the source code of your application, or in a file in your image, but these are both bad ideas for a variety of reasons. The first is that you have leaked your secret (the password) into an environment where you aren’t necessarily thinking about access control. If you put a password into your source control, you are aligning access to your source with access to all secrets. This isn’t the best course of action because you will probably have a broader set of users who can access your source code than should really have access to your Redis instance. Likewise, someone who has access to your container image shouldn’t necessarily have access to your production database.\n",
+    "\n",
+    "#### In addition to concerns about access control, another reason to avoid binding secrets to source control and/or images is parameterization. You want to be able to use the same source code and images in a variety of environments (e.g., development, canary, and production). If the secrets are tightly bound in source code or an image, you need a different image (or different code) for each environment.\n",
+    "\n",
+    "#### Having seen ConfigMaps in the previous section, you might immediately think that the password could be stored as a configuration and then populated into the application as an application-specific configuration. You’re absolutely correct to believe that the separation of configuration from application is the same as the separation of secrets from application. But the truth is that a secret is an important concept by itself. You likely want to handle access control, handling, and updates of secrets in a different way than a configuration. More important, you want your developers thinking differently when they are accessing secrets than when they are accessing configuration. For these reasons, Kubernetes has a built-in Secret resource for managing secret data.\n",
+    "\n",
+    "- You can create a secret password for your Redis database as follows:\n",
+    "- kubectl create secret generic redis-passwd --from-literal=passwd=${RANDOM}\n",
+    "\n",
+    "#### After you have stored the Redis password as a secret in Kubernetes, you then need to bind that secret to the running application when deployed to Kubernetes. To do this, you can use a Kubernetes Volume. A Volume is effectively a file or directory that can be mounted into a running container at a user-specified location. In the case of secrets, the Volume is created as a tmpfs RAM-backed filesystem and then mounted into the container. This ensures that even if the machine is physically compromised (quite unlikely in the cloud, but possible in the datacenter), the secrets are much more difficult for an attacker to obtain."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To add a secret Volume to a Deployment, you need to specify two new entries in the YAML for the Deployment. The first is a volume entry for the pod that adds the Volume to the pod:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "...\n",
+    "  volumes:\n",
+    "  - name: passwd-volume\n",
+    "    secret:\n",
+    "    secretName: redis-passwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Container Storage Interface (CSI) drivers enable you to use key management systems (KMS) that are located outside of your Kubernetes cluster. This is often a requirement for compliance and security within large or regulated organizations. If you use one of these CSI drivers your Volume would instead look like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "...\n",
+    "  volumes:\n",
+    "  - name: passwd-volume\n",
+    "    csi:\n",
+    "      driver: secrets-store.csi.k8s.io\n",
+    "      readOnly: true\n",
+    "      volumeAttributes:\n",
+    "        secretProviderClass: \"azure-sync\"\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Regardless of which method you use, with the Volume defined in the pod, you need to mount it into a specific container. You do this via the volumeMounts field in the container description:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "...\n",
+    "  volumeMounts:\n",
+    "  - name: passwd-volume\n",
+    "    readOnly: true\n",
+    "    mountPath: \"/etc/redis-passwd\"\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "apiVersion: apps/v1\n",
+    "kind: Deployment\n",
+    "metadata:\n",
+    "  labels:\n",
+    "    app: frontend\n",
+    "  name: frontend\n",
+    "  namespace: default\n",
+    "spec:\n",
+    "  replicas: 2\n",
+    "  selector:\n",
+    "    matchLabels:\n",
+    "      app: frontend\n",
+    "  template:\n",
+    "    metadata:\n",
+    "      labels:\n",
+    "        app: frontend\n",
+    "    spec:\n",
+    "      containers:\n",
+    "      - image: my-repo/journal-server:v1-abcde\n",
+    "        imagePullPolicy: IfNotPresent\n",
+    "        name: frontend\n",
+    "        volumeMounts:\n",
+    "        - name: passwd-volume\n",
+    "          readOnly: true\n",
+    "          mountPath: \"/etc/redis-passwd\"\n",
+    "        resources:\n",
+    "          requests:\n",
+    "            cpu: \"1.0\"\n",
+    "            memory: \"1G\"\n",
+    "          limits:\n",
+    "            cpu: \"1.0\"\n",
+    "            memory: \"1G\"\n",
+    "      volumes:\n",
+    "        - name: passwd-volume\n",
+    "          secret:\n",
+    "            secretName: redis-passwd"
+   ]
   }
  ],
  "metadata": {
