added new formatting

--- a/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
@@ -362,6 +362,20 @@
     "          secret:\n",
     "            secretName: redis-passwd"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deploying a Simple Stateful Database\n",
+    "\n",
+    "#### Although conceptually deploying a stateful application is similar to deploying a client like our frontend, state brings with it more complications. The first is that in Kubernetes a pod can be rescheduled for a number of reasons, such as node health, an upgrade, or rebalancing. When this happens, the pod might move to a different machine. If the data associated with the Redis instance is located on any particular machine or within the container itself, that data will be lost when the container migrates or restarts. To prevent this, when running stateful workloads in Kubernetes it’s important to use remote PersistentVolumes to manage the state associated with the application."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
