added new changes

--- a/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
@@ -375,7 +375,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Using Ingress to Route Traffic to a Static File Server\n",
+    "\n",
+    "#### The final component in our application is a static file server. The static file server is responsible for serving HTML, CSS, JavaScript, and image files. It’s both more efficient and more focused for us to separate static file serving from our API serving frontend described earlier. We can easily use a high-performance static off-the-shelf file server like NGINX to serve files while we allow our development teams to focus on the code needed to implement our API.\n",
+    "\n",
+    "#### Fortunately, the Ingress resource makes this sort of mini-microservice architecture very easy. Just like the frontend, we can use a Deployment resource to describe a replicated NGINX server. Let’s build the static images into the NGINX container and deploy them to each replica. The Deployment resource looks as follows:"
+   ]
   }
  ],
  "metadata": {
