added new changes

--- a/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Basic-Service.ipynb
@@ -382,6 +382,129 @@
     "\n",
     "#### Fortunately, the Ingress resource makes this sort of mini-microservice architecture very easy. Just like the frontend, we can use a Deployment resource to describe a replicated NGINX server. Let’s build the static images into the NGINX container and deploy them to each replica. The Deployment resource looks as follows:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "apiVersion: apps/v1\n",
+    "kind: Deployment\n",
+    "metadata:\n",
+    "  labels:\n",
+    "    app: fileserver\n",
+    "  name: fileserver\n",
+    "  namespace: default\n",
+    "spec:\n",
+    "  replicas: 2\n",
+    "  selector:\n",
+    "    matchLabels:\n",
+    "      app: fileserver\n",
+    "  template:\n",
+    "    metadata:\n",
+    "      labels:\n",
+    "        app: fileserver\n",
+    "    spec:\n",
+    "      containers:\n",
+    "      # This image is intended as an example, replace it with your own\n",
+    "      # static files image.\n",
+    "      - image: my-repo/static-files:v1-abcde\n",
+    "        imagePullPolicy: Always\n",
+    "        name: fileserver\n",
+    "        terminationMessagePath: /dev/termination-log\n",
+    "        terminationMessagePolicy: File\n",
+    "        resources:\n",
+    "          requests:\n",
+    "            cpu: \"1.0\"\n",
+    "            memory: \"1G\"\n",
+    "          limits:\n",
+    "            cpu: \"1.0\"\n",
+    "            memory: \"1G\"\n",
+    "      dnsPolicy: ClusterFirst\n",
+    "      restartPolicy: Always"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now that there is a replicated static web server up and running, you will likewise create a Service resource to act as a load balancer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "apiVersion: v1\n",
+    "kind: Service\n",
+    "metadata:\n",
+    "  labels:\n",
+    "    app: fileserver\n",
+    "  name: fileserver\n",
+    "  namespace: default\n",
+    "spec:\n",
+    "  ports:\n",
+    "  - port: 80\n",
+    "    protocol: TCP\n",
+    "    targetPort: 80\n",
+    "  selector:\n",
+    "    app: fileserver\n",
+    "  sessionAffinity: None\n",
+    "  type: ClusterIP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now that you have a Service for your static file server, extend the Ingress resource to contain the new path. It’s important to note that you must place the / path after the /api path, or else it would subsume /api and direct API requests to the static file server. The new Ingress looks like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "apiVersion: networking.k8s.io/v1\n",
+    "kind: Ingress\n",
+    "metadata:\n",
+    "  name: frontend-ingress\n",
+    "spec:\n",
+    "  rules:\n",
+    "  - http:\n",
+    "      paths:\n",
+    "      - path: /api\n",
+    "        pathType: Prefix\n",
+    "        backend:\n",
+    "          service:\n",
+    "            name: fileserver\n",
+    "            port:\n",
+    "              number: 8080\n",
+    "      # NOTE: this should come after /api or else it will hijack requests\n",
+    "      - path: /\n",
+    "        pathType: Prefix\n",
+    "        backend:\n",
+    "          service:\n",
+    "            name: fileserver\n",
+    "            port:\n",
+    "              number: 80"
+   ]
   }
  ],
  "metadata": {
