added new notes

--- a/Kubernetes/Kub-Best-practices.ipynb/Developer-Workflows.ipynb
+++ b/Kubernetes/Kub-Best-practices.ipynb/Developer-Workflows.ipynb
@@ -136,7 +136,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Think about developer experience in three phases: onboarding, developing, and testing. Make sure that the development environment you build supports all three of these phases.\n",
+    "\n",
+    "- When building a development cluster, you can choose between one large cluster and a cluster per developer. There are pros and cons to each, but generally a single large cluster is a better approach.\n",
+    "\n",
+    "- When you add users to a cluster, add them with their own identity and access to their own namespace. Use resource limits to restrict how much of the cluster they can use.\n",
+    "\n",
+    "- When managing namespaces, think about how you can reap old, unused resources. Developers will have bad hygiene about deleting unused things. Use automation to clean it up for them.\n",
+    "\n",
+    "- Think about cluster-level services like logs and monitoring that you can set up for all users. Sometimes, cluster-level dependencies like databases are also useful to set up on behalf of all users using templates like Helm charts."
+   ]
   }
  ],
  "metadata": {
